# nebulacr

./: .gitignore  CLAUDE-FIX-PULLTHROUGH-BLOBS.md  CLAUDE-FIX-PUSH.md  CONTRIBUTING.md  Cargo.toml  DOCKERHUB.md  Dockerfile  Dockerfile.scratch  README.md  RESUME.md  SECURITY.md  docker-compose.nightly.yml  docker-compose.observability.yml  docker-compose.yml  index.yaml
.github/workflows/: ci.yml  deploy-k3s.yml  deploy-mirror-native.yml  deploy-nightly-cve-scan.yml  docker-hub-publish.yml  docker-publish.yml  example-nebulacr-usage.yml  helm-release.yml  nightly-cve-scan-all.yml  nightly-cve-scan.yml  nightly-registry-test.yml  publish-landing.yml
config/: nebulacr.example.toml
contrib/opsapi/: README.md
contrib/opsapi/migrations/: container-registry-metadata.lua
contrib/opsapi/routes/: registry-events.lua  registry-metadata.lua
crates/nebula-ai/: Cargo.toml
crates/nebula-ai/src/: lib.rs  ollama.rs
crates/nebula-artifact-types/: Cargo.toml
crates/nebula-artifact-types/src/: lib.rs  types.rs  wasm.rs
crates/nebula-attest/: Cargo.toml
crates/nebula-attest/src/: dsse.rs  lib.rs  verifier.rs
crates/nebula-auth/: Cargo.toml
crates/nebula-auth/src/: main.rs
crates/nebula-common/: Cargo.toml
crates/nebula-common/src/: auth.rs  config.rs  errors.rs  models.rs
crates/nebula-controller/: Cargo.toml
crates/nebula-controller/src/: main.rs
crates/nebula-cost/src/: drainer.rs  lib.rs  rollup.rs
crates/nebula-db/: Cargo.toml
crates/nebula-db/migrations/: 0001_init.sql
crates/nebula-db/src/: lib.rs
crates/nebula-ephemeral/: Cargo.toml
crates/nebula-ephemeral/src/: lib.rs  reaper.rs
crates/nebula-gc/src/: lib.rs  reaper.rs  reconciler.rs
crates/nebula-import/: Cargo.toml
crates/nebula-import/src/: distribution.rs  jobs.rs  lib.rs  runner.rs  source.rs
crates/nebula-lazy/: Cargo.toml
crates/nebula-lazy/src/: indexer.rs  jobs.rs  lib.rs  worker.rs
crates/nebula-mirror/: Cargo.toml
crates/nebula-mirror/src/: lib.rs  service.rs  upstream.rs
crates/nebula-mirror/tests/: scope_and_isolation.rs
crates/nebula-peer/: Cargo.toml
crates/nebula-peer/src/: lib.rs  local.rs  mesh.rs  tcp_mesh.rs
crates/nebula-pilot/src/: chat.rs  lib.rs
crates/nebula-rebuild/: Cargo.toml
crates/nebula-rebuild/src/: emitter.rs  lib.rs
crates/nebula-registry/: Cargo.toml
crates/nebula-registry/src/: audit.rs  dashboard.rs  main.rs  webhook.rs
crates/nebula-replication/: Cargo.toml
crates/nebula-replication/src/: failover.rs  replicator.rs
crates/nebula-resilience/: Cargo.toml
crates/nebula-resilience/src/: circuit_breaker.rs  resilient_store.rs  retry.rs
crates/nebula-scanner/: Cargo.toml
crates/nebula-scanner/src/: api.rs  authkey.rs  config.rs  cve_search.rs  dockerfile.rs  export.rs  github_crawl.rs  github_pr.rs  image.rs  lib.rs  model.rs  notify.rs  policy.rs  queue.rs  ratelimit.rs  recommend.rs  report.rs  runtime.rs  sbom_export.rs  settings.rs  store.rs  suppress.rs  vex.rs  worker.rs
crates/nebula-scanner/src/detector/: license.rs  mod.rs  secret.rs  store.rs
crates/nebula-scanner/src/matcher/: apk.rs  deb.rs  go.rs  mod.rs  pep440.rs  rpm.rs
crates/nebula-scanner/src/sbom/: binary.rs  cargo.rs  dpkg.rs  go.rs  mod.rs  npm.rs  pypi.rs  rpm.rs
crates/nebula-scanner/src/vulndb/: mod.rs  nebula.rs  osv.rs  severity.rs
crates/nebula-scanner/src/vulndb/ingest/: ghsa.rs  mod.rs  nvd.rs  osv.rs  writer.rs
dashboard/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  ScanDetail.tsx  api.ts  main.tsx  styles.css
deploy/ansible/: deploy-mirror.yml  inventory.yml
deploy/helm/nebulacr/: Chart.yaml  README.md  artifacthub-repo.yml  values-acc.yaml  values-mirror-srv1423968.yaml  values.yaml
deploy/helm/nebulacr/templates/: _helpers.tpl  (+16 more)
deploy/k8s/nightly-cve-scan/: cronjob.yaml
deploy/observability/prometheus/: prometheus.yml
docs/: architecture.md  authentication.md  ci-cd.md  deployment.md  grafana-dashboards.md  multi-tenancy.md  observability.md  online-gc.md  security-audit-checklist.md  system-architecture-diagrams.md  threat-model.md  troubleshooting.md
docs/design/: 001-image-signing.md  002-admission-gate.md  003-tag-immutability-quarantine.md  004-gc-retention.md  005-audit-log.md  006-promotion-api.md  007-web-ui-parity.md  008-cmk-encryption-at-rest.md  PROMPT.md  README.md
docs/examples/: gate-on-scan.sh
docs/landing/: api.html  index.html
examples/argocd/: image-updater.yml
examples/github-actions/: push-image.yml  reusable-push.yml
examples/github-actions/nebulacr-login-action/: action.yml
examples/gitlab-ci/: push-image.yml
examples/jenkins/: Jenkinsfile
examples/kubernetes/: ha-production.yaml  minimal.yaml
examples/scripts/: nebulacr-login.sh
examples/tekton/: push-task.yml
landing/: index.html
scripts/: k8s-nightly-scan.sh  nightly-report-pdf.py  nightly-scan-all.sh  nightly-scan.sh  slack-upload-pdf.py  sync-gh-secrets.sh
tests/e2e/: online_gc_e2e.sh
(+15 files in other folders)
